--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Lecteur Port Série</title>
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/fft.js/dist/fft.min.js"></script>
   <style>
     body {
       font-family: sans-serif;
@@ -52,6 +54,11 @@
       gap: 10px;
       margin-top: 10px;
     }
+    #spectrogram {
+      width: 100%;
+      height: 400px;
+      margin-top: 20px;
+    }
   </style>
 </head>
 <body>
@@ -89,6 +96,20 @@
   <button id="showAllBtn">Afficher toutes les données enregistrées</button>
   <div id="allDataContainer"></div>
 
+  <!-- Sélection de la colonne pour le graphique -->
+  <div>
+    <label for="columnSelect">Sélectionnez une colonne :</label>
+    <select id="columnSelect">
+      <option value="3">Colonne 4 (Index 3)</option>
+      <option value="4">Colonne 5 (Index 4)</option>
+      <option value="5">Colonne 6 (Index 5)</option>
+    </select>
+    <button id="plotButton">Afficher le spectre de fréquence</button>
+  </div>
+
+  <!-- Graphique de spectrométrie -->
+  <div id="spectrogram"></div>
+
   <script>
     let port, reader;
     let keepReading = false;
@@ -96,6 +117,7 @@
     let recordedData = "";
     let displayedLines = [];
     let autoScrollEnabled = true;
+    let allData = [];
 
     const connectBtn = document.getElementById("connectBtn");
     const disconnectBtn = document.getElementById("disconnectBtn");
@@ -106,6 +128,9 @@
     const allDataContainer = document.getElementById("allDataContainer");
     const showAllBtn = document.getElementById("showAllBtn");
     const clearDataBtn = document.getElementById("clearDataBtn");
+    const columnSelect = document.getElementById("columnSelect");
+    const plotButton = document.getElementById("plotButton");
+    const spectrogram = document.getElementById("spectrogram");
 
     connectBtn.addEventListener("click", async () => {
       try {
@@ -177,6 +202,7 @@
             }
 
             displayedLines.push(line);
+            allData.push(line);  // Stocker toutes les données pour traitement spectrométrique
             if (displayedLines.length > 300) {
               displayedLines.shift();
             }
@@ -217,6 +243,39 @@
     clearDataBtn.addEventListener("click", () => {
       displayedLines = [];  // Vider l'affichage
       dataContainer.textContent = "";  // Effacer l'encadré
+    });
+
+    // Fonction pour afficher le spectre de fréquence via FFT
+    plotButton.addEventListener("click", () => {
+      const columnIndex = parseInt(columnSelect.value); // Index de la colonne sélectionnée
+      const values = allData.map(line => {
+        const parts = line.split(";");
+        return parseFloat(parts[columnIndex]);
+      }).filter(value => !isNaN(value));
+
+      const fft = new FFT(values.length);
+      const spectrum = fft.createComplexArray();
+      fft.realTransform(spectrum, values);
+      fft.completeSpectrum(spectrum);
+
+      // Extraire les fréquences et amplitudes
+      const freqs = fft.getFrequencyBins();
+      const amps = fft.getMagnitudes(spectrum);
+
+      // Afficher le graphique
+      const data = [{
+        x: freqs,
+        y: amps,
+        type: 'scatter',
+        mode: 'lines',
+        name: 'Spectre de fréquence'
+      }];
+      const layout = {
+        title: 'Spectre de Fréquence',
+        xaxis: { title: 'Fréquence (Hz)' },
+        yaxis: { title: 'Amplitude' }
+      };
+      Plotly.newPlot(spectrogram, data, layout);
     });
   </script>
 </body>
