--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
   <div>
     <label for="columnSelect">Sélectionnez une colonne :</label>
     <select id="columnSelect">
+      <option value="0">Colonne 1 (Index 0)</option>
+      <option value="1">Colonne 2 (Index 1)</option>
+      <option value="2">Colonne 3 (Index 2)</option>
       <option value="3">Colonne 4 (Index 3)</option>
       <option value="4">Colonne 5 (Index 4)</option>
       <option value="5">Colonne 6 (Index 5)</option>
