--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <br/>
 
-  <!-- Affichage des données -->
+  <!-- Sélectionner la colonne à analyser -->
   <div>
     <label for="columnSelect">Sélectionner une colonne :</label>
     <select id="columnSelect">
