--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Lecteur Port Série</title>
   <script src="https://cdn.plot.ly/plotly-2.20.0.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/fft.js@0.4.0/dist/fft.min.js"></script>  
+  <script src="https://cdn.jsdelivr.net/npm/fft.js/dist/fft.min.js"></script>
   <style>
     body {
       font-family: sans-serif;
