--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Lecteur Port Série</title>
   <script src="https://cdn.plot.ly/plotly-2.20.0.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/fft.js/1.0.1/fft.min.js"></script>  
+  <script src="https://cdn.jsdelivr.net/gh/indutny/fft.js/dist/fft.min.js"></script>  
   <style>
     body {
       font-family: sans-serif;
