--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Lecteur Port Série</title>
   <script src="https://cdn.plot.ly/plotly-2.20.0.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/fft.js/blob/master/dist/fft.js" onerror="alert('Erreur de chargement de la bibliothèque FFT')"></script>
+  <script src="https://cdn.jsdelivr.net/npm/fft-js@0.0.12/index.min.js" onerror="alert('Erreur de chargement de la bibliothèque FFT')"></script>
   <style>
     body {
       font-family: sans-serif;
