--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
           console.log("FFT détectée comme window." + key);
           break;
         }
+        else{
+          console.log("Error" + key);
+        }
       }
     }
   </script>
